<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/topOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/text_view_background"
        android:text="@string/top_option_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/option_color"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/botOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/text_view_background"
        android:text="@string/buttom_option_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/option_color"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leftOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@color/text_view_background"
        android:text="@string/buttom_option_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/option_color"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rightOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftOption"
        android:layout_alignBottom="@+id/leftOption"
        android:layout_alignParentRight="true"
        android:background="@color/text_view_background"
        android:text="@string/right_option_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/option_color"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/topOption"
        android:layout_alignBottom="@+id/topOption"
        android:layout_alignLeft="@+id/leftOption"
        android:layout_marginLeft="17dp"
        android:text="@string/score_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/score_color"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/leftOption"
        android:layout_centerHorizontal="true"
        android:text="@string/question_text_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:singleLine="false"
        android:textColor="@color/question_color"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />

</RelativeLayout>